--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         .portfolio .skills {
             max-width: 420px;
-            margin-top: 20px;
+            margin-top: 40px;
         }
 
         .portfolio .skills .skill {
@@ -106,6 +106,10 @@
 
         h6 {
             margin-top: 15px;
+        }
+
+        .skills h4 {
+            text-align: center;
         }
 
         @media (max-width: 320px) {
