--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
         h6 {
             margin-top: 15px;
+            text-align: center;
         }
 
         .skills h4 {
@@ -215,8 +216,7 @@
                 margin-bottom: 30px;
             }
 
-            h4,
-            h6 {
+            h4 {
                 text-align: center;
             }
 
